ScanResultProcessors: handle whole directories being removed in PartialUpdateScan

This gets a bit complicated, but hopefully the code is commented enough
that is it actually understandable by someone else than me.

BUGFIXES:
 * When you remove whole directories from the Local Collection and have
   Watch Folders for Changes enabled, the tracks now disappear from
   Collection Browser.

BUG: 311078
FIXED-IN: 2.8